# vision-ui-skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  Guardfile  LICENSE.txt  NEXT.txt  README.md
cmake/: Gch.cmake  ListFiles.cmake  QArtmRelease.cmake
lib/: CMakeLists.txt  CaptureThread.cpp  CaptureThread.hpp  ImageWidget.cpp  ImageWidget.hpp  LogMessageEvent.cpp  LogMessageEvent.hpp  LoggingHub.cpp  LoggingHub.hpp  Map2D.hpp  Named.cpp  Named.hpp  ObjectDetector.cpp  ObjectDetector.hpp  PolygonSelector.cpp  PolygonSelector.hpp  Pretty.cpp  Pretty.hpp  QArtmEvent.cpp  QArtmEvent.hpp  QOpenCV.cpp  QOpenCV.hpp  ResponsibilityMapper.cpp  ResponsibilityMapper.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Throttle.cpp  Throttle.hpp  library.cpp  library.h  static.h
main/: CMakeLists.txt  artmgl.cpp  artmgl.h  main.cpp
ruby/guard/: groupwrap.rb  helpers.rb
ruby/spec/: groupwrap_spec.rb
test/: CMakeLists.txt  test_library.h
