PROJECT( qartm )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# setup build system
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
INCLUDE(Gch)
INCLUDE(ListFIles)

# setup project proper
SET(PROJECT_LIB lib${PROJECT_NAME})
SET(PROJECT_EXE ${PROJECT_NAME})
SET(PROJECT_LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(PROJECT_PCH ${PROJECT_LIB_DIR}/static.h)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

# setup dependencies

# CxxTest
# Because we have it embedded as a submodule, we can help cmake find it
SET(CXXTEST_INCLUDE_DIR ${PROJECT_LIB_DIR}/cxxtest/cxxtest)
SET(CXXTEST_PYTHON_TESTGEN_EXECUTABLE
  ${PROJECT_LIB_DIR}/cxxtest/bin/cxxtestgen)
SET(CXXTEST_USE_PYTHON 1)
FIND_PACKAGE(CxxTest)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(main)

