PROJECT( qartm )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# setup build system
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
INCLUDE(Gch)
INCLUDE(ListFIles)

# setup project proper
SET(PROJECT_LIB lib${PROJECT_NAME})
SET(PROJECT_EXE ${PROJECT_NAME})
SET(PROJECT_LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(PROJECT_PCH static.h)
SET(PROJECT_QT4_MODULES QtCore QtGui)
SET(PROJECT_LIBRARIES ${PROJECT_LIB})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/lib ${CMAKE_SOURCE_DIR}/lib)

# setup dependencies

# CxxTest
# Because we have it embedded as a submodule, we can help cmake find it
SET(CXXTEST_INCLUDE_DIR ${PROJECT_LIB_DIR}/cxxtest/cxxtest)
SET(CXXTEST_PYTHON_TESTGEN_EXECUTABLE
  ${PROJECT_LIB_DIR}/cxxtest/bin/cxxtestgen)
SET(CXXTEST_USE_PYTHON 1)
FIND_PACKAGE(CxxTest)

# Qt
SET(CMAKE_AUTOMOC 1)
FIND_PACKAGE(Qt4 4.7.3 REQUIRED COMPONENTS ${PROJECT_QT4_MODULES})
INCLUDE(${QT_USE_FILE})
LIST(APPEND PROJECT_LIBRARIES ${QT_LIBRARIES})

# OpenCV
FIND_PACKAGE(OpenCV REQUIRED)
LIST(APPEND PROJECT_LIBRARIES ${OpenCV_LIBS})

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(main)

