LIST_FILES(exe.sources EXE_SOURCES "*.cpp")
ADD_EXECUTABLE(${PROJECT_EXE} ${EXE_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${PROJECT_LIBRARIES})
ADD_DEPENDENCIES(${PROJECT_EXE} exe.sources)
SET_TARGET_PROPERTIES( ${PROJECT_EXE}
  PROPERTIES COMPILE_FLAGS "-Winvalid-pch -include ${PROJECT_PCH}")
