LIST_FILES(exe.sources EXE_SOURCES "*.cpp")

ADD_EXECUTABLE(${PROJECT_EXE} ${EXE_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${PROJECT_LIBRARIES})
ADD_DEPENDENCIES(${PROJECT_EXE} exe.sources)
SET_TARGET_PROPERTIES( ${PROJECT_EXE}
  PROPERTIES COMPILE_FLAGS "-Winvalid-pch -include ${PROJECT_PCH}")


SET(PROJECT_APP Proj_${PROJECT_EXE})
ADD_EXECUTABLE(${PROJECT_APP} MACOSX_BUNDLE ${EXE_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_APP} ${PROJECT_LIBRARIES})
ADD_DEPENDENCIES(${PROJECT_APP} exe.sources)
SET_TARGET_PROPERTIES( ${PROJECT_APP}
  PROPERTIES COMPILE_FLAGS "-Winvalid-pch -include ${PROJECT_PCH}")

ADD_CUSTOM_COMMAND(
  TARGET ${PROJECT_APP} POST_BUILD
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  COMMAND rm -rf ${PROJECT_APP}.app/Contents/{Frameworks,PlugIns,Resources/qt.conf}
  COMMAND ${QT_BINARY_DIR}/macdeployqt main/${PROJECT_APP}.app 2> /dev/null
  COMMAND chmod a+w main/${PROJECT_APP}.app/Contents/Frameworks/*.dylib
  COMMAND ${QT_BINARY_DIR}/macdeployqt main/${PROJECT_APP}.app 2> /dev/null

  # icons file?
  #COMMAND cp "${CMAKE_SOURCE_DIR}/WTS.icns" ${APPLICATION_NAME}.app/Contents/Resources/
  COMMENT "Fixing up the app bundle")
