LIST_FILES(exe.sources EXE_SOURCES "*.cpp")

IF (${CMAKE_BUILD_TYPE} STREQUAL Release)
  SET(RELEASE_EXE_TAGS MACOSX_BUNDLE WIN32)
ENDIF (${CMAKE_BUILD_TYPE} STREQUAL Release)

ADD_EXECUTABLE(${PROJECT_NAME} ${RELEASE_EXE_TAGS} ${EXE_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBRARIES})
ADD_DEPENDENCIES(${PROJECT_NAME} exe.sources)
SET_TARGET_PROPERTIES( ${PROJECT_NAME}
  PROPERTIES COMPILE_FLAGS "-Winvalid-pch -include ${PROJECT_PCH}")

INCLUDE( QArtmRelease )
